--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,13 +37,13 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.1.9"
 
     // RxAndroid
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     // Jackson
-    compile 'com.fasterxml.jackson.core:jackson-core:2.9.4'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
-    compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.4'
-    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.4"
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.4'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.4'
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.4"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
